--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 	<h1>Test FOTA hébergeur Fouad =&gt; Syscom Prorep</h1>
 	<div style="height: 80vh; background-color: #F5F5F5; display: flex; justify-content: center; align-items: center;">
-		<p style="font-size: 24px;">Le contenu de votre page ici...</p>
+		<p style="font-size: 24px;">✨ ❤️ 💡 🎉 🔥 🌈 🌟 ⭐️ 💫 💥</p>
 	</div>
 </body>
 </html>
