--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test FOTA hébergeur Fouad =&gt; Syscom Prorep</title>
+	<title>Test FOTA hébergeur de Fouad</title>
 	<style>
+		body {
+			background-color: black;
+		}
+		
 		h1 {
 			color: blue;
-			font-size: 60px;
-			text-align: center;
+			font-size: 40px;
 		}
 	</style>
 </head>
 <body>
-	<h1>Test FOTA hébergeur Fouad =&gt; Syscom Prorep</h1>
-	<div style="height: 80vh; background-color: #F5F5F5; display: flex; justify-content: center; align-items: center;">
-		<p style="font-size: 24px;">✨ ❤️ 💡 🎉 🔥 🌈 🌟 ⭐️ 💫 💥</p>
-	</div>
+	<h1>Test FOTA hébergeur de Fouad</h1>
+	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Albert_Einstein_Head.jpg/220px-Albert_Einstein_Head.jpg" alt="Photo d'Einstein">
+	<p>Voici quelques caractères spéciaux :</p>
+	<ul>
+		<li>✨</li>
+		<li>❤️</li>
+		<li>💡</li>
+		<li>🎉</li>
+		<li>🔥</li>
+		<li>🌈</li>
+		<li>🌟</li>
+		<li>⭐️</li>
+		<li>💫</li>
+		<li>💥</li>
+	</ul>
 </body>
 </html>
