--- a/index.html
+++ b/index.html
@@ -31,4 +31,4 @@
 	</ul>
 </body>
 </html>
-<a href="https://github.com/FouadTORCHOUN/FouadTORCHOUN.github.io/blob/896de0a3228c9df75b6f59e127f13f2a0220dc84/B07V01toB17V01.bin" download>Télécharger le fichier .bin</a>
+<a href="https://raw.githubusercontent.com/FouadTORCHOUN/FouadTORCHOUN.github.io/896de0a3228c9df75b6f59e127f13f2a0220dc84/B07V01toB17V01.bin" download>Télécharger le fichier .bin</a>
