--- a/index.html
+++ b/index.html
@@ -31,5 +31,5 @@
 	</ul>
 </body>
 </html>
-<a href="https://www.dropbox.com/s/i4fmfdyer6noub3/B07V01toB17V01.bin?dl=1" download>Télécharger le fichier .bin</a>
+<a href="https://www.dropbox.com/s/i4fmfdyer6noub3/B07V01toB17V01.bin?dl=1" >Télécharger le fichier .bin</a>
 
