--- a/index.html
+++ b/index.html
@@ -1,35 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Test FOTA hébergeur de Fouad</title>
+	<title>Test FOTA hébergeur Fouad =>Syscom Prorep</title>
 	<style>
-		body {
-			background-color: black;
-		}
-		
 		h1 {
 			color: blue;
-			font-size: 40px;
+			font-size: 36px;
 		}
 	</style>
 </head>
 <body>
-	<h1>Test FOTA hébergeur de Fouad</h1>
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Albert_Einstein_Head.jpg/220px-Albert_Einstein_Head.jpg" alt="Photo d'Einstein">
-	<p>Voici quelques caractères spéciaux :</p>
-	<ul>
-		<li>✨</li>
-		<li>❤️</li>
-		<li>💡</li>
-		<li>🎉</li>
-		<li>🔥</li>
-		<li>🌈</li>
-		<li>🌟</li>
-		<li>⭐️</li>
-		<li>💫</li>
-		<li>💥</li>
-	</ul>
+	<h1>Test FOTA hébergeur Fouad =>Syscom Prorep</h1>
+	<a id="download-link" href="https://www.dropbox.com/s/i4fmfdyer6noub3/B07V01toB17V01.bin?dl=1" download>Télécharger le fichier .bin</a>
+
+	<script>
+		document.getElementById("download-link").click();
+	</script>
 </body>
 </html>
-<a href="https://www.dropbox.com/s/i4fmfdyer6noub3/B07V01toB17V01.bin?dl=1" >Télécharger le fichier .bin</a>
-
