--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
 <head>
 	<title>Test FOTA hébergeur Fouad =>Syscom Prorep</title>
 	<style>
-	body {
-        background-color: black;
-        background-image: url("https://media.ooreka.fr/public/image/3-305497-2665-main-13059759.jpg");
-        background-repeat: no-repeat;
-        background-position: right bottom;
-      }
-    </style>
+		h1 {
+			color: blue;
+			font-size: 36px;
+		}
+	</style>
 </head>
 <body>
-    <h1 style="color: blue; font-size: 48px;">Test FOTA hébergeur Fouad</h1>
-    <a href="https://example.com/B07V01toB17V01.bin" download onclick="authenticate(event)">Télécharger le fichier .bin</a>
+	<h1>Test FOTA hébergeur Fouad =>Syscom Prorep</h1>
+	<a href="https://example.com/B07V01toB17V01.bin" download onclick="authenticate(event)">Télécharger le fichier .bin</a>
 
 	<script>
 		function authenticate(event) {
